# pylox

./: pyproject.toml
script/: generate_ast.py
src/pylox/: cli.py  main.py
src/pylox/helper/: enum.py
src/pylox/interpreter/: environment.py  interpreter.py
src/pylox/parser/: ast_printer.py  expr.py  parser.py  stmt.py
src/pylox/scanner/: scanner.py
test/unittest/pylox/parser/: test_ast_printer.py
test/unittest/pylox/scanner/: test_scanner.py
test_lox_script/: test_script.lox
