[tool.poetry]
name = "pylox"
version = "0.1.0"
description = ""
authors = ["Huy Tran <huy.td183768@sis.hust.edu.vn>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
